--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=learningspringboot4@gmail.com
+spring.mail.password=ubibxtcdjcgpziqj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
